<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:icon="@drawable/ic_clipboard_check_grey600_24dp"
        app:key="order_number_format"
        app:title="@string/order_number_format"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:icon="@drawable/ic_clipboard_check_grey600_24dp"
        app:key="order_running_number"
        app:title="@string/order_running_number"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:icon="@drawable/ic_clipboard_check_grey600_24dp"
        app:key="server_address"
        app:title="@string/server_address"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:icon="@drawable/ic_clipboard_check_grey600_24dp"
        app:key="print_server_address"
        app:title="@string/print_server_address"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:icon="@drawable/ic_clipboard_check_grey600_24dp"
        app:defaultValue="@string/company_name_default"
        app:key="company_name"
        app:title="@string/company_name"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:icon="@drawable/ic_clipboard_check_grey600_24dp"
        app:defaultValue="reply"
        app:entries="@array/reply_entries"
        app:entryValues="@array/reply_values"
        app:key="reply"
        app:title="@string/reply_title"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
